--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,12 +1,26 @@
 /*#1e3d59, #f5f0e1, #ff6e40, #ffc13b*/
 
 section {
-    background-color: #1e3d59;
     height: 100vh;
-    color: white;
+    background-color: #1e3d59;
+    color: white ;
+    overflow: hidden;
 
 }
 
+h1,span,strong{
+    font-family: 'Libre Bodoni', serif;
+}
+
+h3, .about div {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
+}
+
+p{
+    font-family: 'Roboto Mono', monospace;
+    
+}
 /* home */
 .home {
     padding: 10rem 0rem 0rem 0rem;
@@ -53,7 +67,7 @@ section {
 }
 
 .about h1 {
-    font-size: 5rem;
+    font-size: 4rem;
 }
 
 .about h3 {
@@ -61,10 +75,68 @@ section {
 }
 
 .about p {
-    font-size: 2rem;
+    font-size: 1.7rem;
     text-align: justify;
 }
 
+/* projects */
+.projects{
+    padding-top: 2rem;
+    height: 100%;
+}
+.card{
+    background-color: darkslategrey;
+}
+.card:hover{
+    border-color: #ff6e40;
+    background-color: transparent;
+}
+
+.projects h1{
+    font-size: 4rem;
+}
+
+.projects h3{
+    font-size: 2rem;
+}
+
+.projects p{
+    font-size: 2;
+}
+
+/* contact */
+.contact{
+    height: 100%;
+    padding-bottom: 5rem;
+    padding-top: 5rem;
+}
+.contact h1{
+    font-size: 4rem;
+}
+
+.contact h3{
+    font-size: 2rem;
+}
+
+.contact p{
+    font-size: 1rem;
+
+}
+
+.contact i{
+    padding: 10px ;
+    font-size: 2rem;
+}
+
+.contact input, textarea{
+    background-color: #2a2e35;
+    border-radius: 10px;
+    border-color: #2a2e35;
+}
+
+.contact button{
+    border-radius: 100px;
+}
 
 
 /* Mobile View */
@@ -78,15 +150,15 @@ section {
 
     .home h1 {
         padding-top: 15px;
-        font-size: 3rem;
-    }
-
-    .home h3 {
         font-size: 2rem;
     }
 
+    .home h3 {
+        font-size: 1.5rem;
+    }
+
     .home p {
-        font-size: 1.1rem;
+        font-size: 1rem;
         text-align: justify;
     }
 
@@ -97,17 +169,44 @@ section {
     }
 
     .about h1 {
-        font-size: 3rem;
-    }
-
-    .about h3 {
         font-size: 2rem;
     }
 
+    .about h3 {
+        font-size: 1.5rem;
+    }
+
     .about p {
-        font-size: 1.1rem;
+        font-size: 1rem;
         text-align: justify;
     }
+
+    /* projects */
+    .projects{
+        padding-top: 2rem;
+        height: 100%;
+    }
+    .projects h1{
+        font-size: 2rem;
+    }
+
+    .projects h3{
+        font-size: 1.5rem;
+    }
+
+    .projects p{
+        text-align: justify;
+        font-size: 1rem;
+    }
+
+    /* contact */
+    .contact h1{
+        font-size: 2rem;
+    }
+    
+    
+
+
 
 
 }
