--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
                 <img alt="Bootstrap Image Preview" src="../../assets/hero.jpg" class="img-thumbnail" />
             </div>
             <div class="col-md-8">
-                <h1>Hi I'm <strong style="color: #ff6e40;">Vaibhav Pachpute.</strong></h1>
+                <h1>Hi I'm <strong style="color: #ff6e40; font-family: 'Libre Bodoni', serif;">Vaibhav Pachpute.</strong></h1>
                 <h3 class="text-left">
                     <span>I'm a </span>
                     <span class="word" style="color: #ff6e40;"></span>
@@ -15,7 +15,7 @@
                     also
                     build native apps with flutter!
                 </p>
-                <button type="button" class="btn btn-md btn-outline-danger">
+                <button type="button" onclick="window.location.href='.../../assets/VaibahvPachpute.pdf'" class="btn btn-md btn-outline-danger">
                     Download CV <i class="bi bi-download"></i>
                 </button>
             </div>
@@ -88,12 +88,79 @@
 
 
 
-<section id="services">
-    <h1>Services</h1>
+<!-- <section id="services">
+    <h1 class="text-center"><span style="color: #ff6e40;">SERVICES</span> </h1>
+</section>  -->
+
+<section id="project" class="projects">
+    <h1 class="text-center">MY <span style="color: #ff6e40;">PROJECTS</span> </h1>
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col-md-4" style="padding-top: 10px;" *ngFor="let project of projects">
+                <div class="card">
+                    <h3 class="card-header">
+                        {{project.title}}
+                    </h3>
+                    <div class="card-body">
+                        <p class="card-text">
+                            {{project.description}}
+                        </p>
+                        <p>
+                            {{project.usedTech}}
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <a class="btn btn-outline-secondary" href="{{project.link}}">View on github</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </section>
-<section id="project">
-    <h1>Project</h1>
-</section>
-<section id="contact">
-    <h1>Contact</h1>
+
+
+<section id="contact" class="contact">
+    <h1 class="text-center">CONTACT <span style="color: #ff6e40;">ME</span> </h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 oder-4">
+                <h3>
+                    Contact me here!
+                </h3>
+
+                <span><i class="bi bi-geo-alt" style="size: 90px;"></i> Location: Bhiwandi,Thane,Maharashtra</span><br>
+                <span><i class="bi bi-envelope-fill"></i> Email: vpachpute22@gmail.com</span><br>
+                <span><i class="bi bi-telephone"></i> +91 9359979571</span><br>
+                <div>
+                    <a href="https://github.com/VaibhavPachpute21" target="_blank"><i class="bi bi-github " style="color:  #000000;" aria-label="GitHub"></i></a>
+                    <a href="https://www.linkedin.com/in/vaibhavpachpute/" target="_blank"><i class="bi bi-linkedin" style="color: #007bb6;" aria-label="Linkedin"></i></a>
+                    <a href="https://twitter.com/vaibhav__404" target="_blank"><i class="bi bi-twitter" style="color: #007bb6;" aria-label="Twitter"></i></a>
+                    <a href="https://www.instagram.com/vaibhav_pachpute_/" target="_blank"><i class="bi bi-instagram" style="color: #e95950;" aria-label="Instagram"></i></a>
+                </div>
+            </div>
+            <div class="col-md-6 oder-1">
+                <p>If you want to get in touch with me just drop a message!</p>
+                <form>
+                    <div class="row">
+                        <div class="mb-3 col-md-6">
+                            <input type="text" class="form-control" placeholder="Your Name">
+                        </div>
+                        <div class="mb-3 col-md-6">
+                            <input type="email" class="form-control" placeholder="Your Email">
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" placeholder="Subject">
+                    </div>
+                    <div class="mb-3">
+                        <textarea type="text" class="form-control" placeholder="Message here..."></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-outline-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </section>
